to prevent overflow long url or long word

--- a/webcompat/static/css/main.css
+++ b/webcompat/static/css/main.css
@@ -715,6 +715,8 @@ form .button {
 	border: solid 2px #c2c2c2;
 	border-radius: 10px;
 	padding: 1em 1em 2em 1em;
+	overflow: hidden;
+	word-wrap: break-word;
 }
 
 /* img attach file */
